<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MapApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="filename">userid</string>

    <!-- Project Code -->
    <string name="ProjectCode">JPN00</string>

    <!--  SCHOOL URL  -->
    <!--<string name="URL_SearchPlace">http://mail.tym-bit.com/php_b/SearchPlace.php</string>-->
    <!--<string name="URL_SearchComment">http://mail.tym-bit.com/php_b/SearchComment.php</string>-->
    <!--<string name="URL_AddPlace">http://mail.tym-bit.com/php_b/AddPlace.php</string>-->
    <!--<string name="URL_AddComment">http://mail.tym-bit.com/php_b/AddComment.php</string>-->
    <!--<string name="URL_UserRegist">http://mail.tym-bit.com/php_b/UserRegistration.php</string>-->
    <!--<string name="URL_EmailUpdate">http://mail.tym-bit.com/php_b/UpdateEmail.php</string>-->
    <!--<string name="URL_PasswordUpdate">http://mail.tym-bit.com/php_b/UpdatePassword.php</string>-->
    <!--<string name="URL_AddTravelWord">http://mail.tym-bit.com/php_b/wpjn_AddTravelWord.php</string>-->
    <!--<string name="URL_SearchRanking">http://mail.tym-bit.com/php_b/wpjn_SearchRanking.php</string>-->

    <!--  HOME URL  -->
    <string name="URL_SearchRanking">http://172.16.42.5:8888/php_b/wpjn_SearchRanking.php</string>
    <string name="URL_UserRegist">http://172.16.42.5:8888/php_b/UserRegistration.php</string>
    <string name="URL_AddTravelWord">http://172.16.42.5:8888/php_b/wpjn_AddTravelWord.php</string>
    <string name="URL_AddRating">http://172.16.42.5:8888/php_b/wpjn_AddRating.php</string>
    <string name="URL_SearchPlace">http://172.16.42.5:8888/php_b/SearchPlace.php</string>
    <string name="URL_SearchComment">http://172.16.42.5:8888/php_b/SearchComment.php</string>
    <string name="URL_AddPlace">http://172.16.42.5:8888/php_b/AddPlace.php</string>
    <string name="URL_AddComment">http://172.16.42.5:8888/php_b/AddComment.php</string>
    <string name="URL_EmailUpdate">http://172.16.42.5:8888/php_b/UpdateEmail.php</string>
    <string name="URL_PasswordUpdate">http://172.16.42.5:8888/php_b/UpdatePassword.php</string>

    <string name="URL_SearchRatingWatch">http://172.16.42.5:8888/php_b/wpjn_SearchRatingWatch.php</string>
    <string name="URL_SearchRatingAverage">http://172.16.42.5:8888/php_b/wpjn_SearchRatingAverage.php</string>

    <!-- Version -->
    <string name="action_version">About</string>
    <string name="MenuBtn_Version">About</string>

    <!-- MainActivity -->
    <string name="MenuBtn_Map">Display Map</string>
    <string name="MenuBtn_Ranking">Ranking</string>
    <string name="MenuBtn_Setting">Setting</string>
    <string name="MenuBtn_TravelDictionary">Travel Dictionary</string>
    <string name="MenuBtn_Rating">Rating</string>

    <!-- MapActivity -->
    <string name="title_activity_map_test">MapTestActivity</string>
    <string name="searchView">searchView</string>
    <string name="searchView_QueryHint">Input place name</string>
    <string name="Marker_NotRegistered">Add Information on this place</string>
    <string name="dialog_NoData">Place is Not Found</string>

    <!-- UserRegistActivity -->
    <string name="title_activity_user_regist">UserRegistActivity</string>
    <string name="Button_Registration">Registration</string>
    <string name="caption_mailaddress">Mail address</string>
    <string name="caption_password">Password</string>
    <string name="ToastMessage_UserRegistration">User registration has been completed.</string>

    <!-- DisplayDetailActivity, AddPlaceActivity -->
    <string name="title_activity_add_place">AddPlaceActivity</string>
    <string name="title_activity_display_detail">DisplayDetailActivity</string>
    <string name="caption_placename">Name</string>
    <string name="caption_placename_en">Name(EN)</string>
    <string name="caption_address">Address</string>
    <string name="caption_telephone">phone</string>
    <string name="caption_remark">Remarks</string>
    <string name="Button_AddPlace">Add</string>
    <string name="Button_AddComment">Comment</string>

    <!-- SelectRankingActivity -->
    <string name="MenuBtn_LikeRanking">Like counts ranking</string>
    <string name="MenuBtn_CommentRanking">Comment counts ranking</string>
    <string name="MenuBtn_CreatetimeRanking">Create Time ranking</string>

    <!-- UserInformationActivity -->
    <string name="SettingBtn_EmailUpdate">Change E-Mail Address</string>
    <string name="SettingBtn_PasswordUpdate">Change Password</string>

    <!-- UserEmailUpdateActivity -->
    <string name="SettingEmailLbl_title">You change the E-Mail Address.</string>
    <string name="SettingEmailLbl_OldEmail">Current E-Mail Address</string>
    <string name="SettingEmailLbl_NewEmail">New E-Mail Address</string>
    <string name="SettingEmailLbl_NowPassword">Current Password</string>
    <string name="SettingEmailBtn_EmailUpdate">Update</string>

    <!-- UserPasswordUpdateActivity -->
    <string name="SettingPasswordLbl_title">You change the Password.</string>
    <string name="SettingPasswordLbl_NowEmail">Current E-Mail Address</string>
    <string name="SettingPasswordLbl_OldPassword">Current Password</string>
    <string name="SettingPasswordLbl_NewPassword">New Password</string>
    <string name="SettingPasswordBtn_PasswordUpdate">Update</string>

    <!-- AddTravelWordActivity -->
    <string name="TravelWordAddLlb_Title">Register the Travel Word.</string>
    <string name="TravelWordAddLlb_Cutline">Cutline</string>
    <string name="TravelWordAddBtn_Gallery">Gallery</string>
    <string name="TravelWordAddBtn_Submit">Submit</string>
    <string-array name="TravelWordSpr_Category">
        <item>Gift</item>
        <item>Leisure venue</item>
    </string-array>

    <!-- RankingActivity -->
    <string name="SearchTag_RankingLike">RankingLike_en</string>
    <string name="SearchTag_RankingComment">RankingComment_en</string>
    <string name="SearchTag_RankingDate">RankingDate_en</string>
    <string name="RankingTitle">Ranking Top 9</string>

    <string name="title_activity_select_ranking">SelectRankingActivity</string>
    <string name="title_activity_user_information_update">UserInformationUpdateActivity</string>
    <string name="title_activity_user_email_update">UserEmailUpdateActivity</string>
    <string name="title_activity_user_password_update">UserPasswordUpdateActivity</string>
    <string name="title_activity_add_travel_word">AddTravelWordActivity</string>
    <string name="title_activity_ranking">RankingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rating">RatingActivity</string>
    <string name="title_activity_rating_menu">RatingMenuActivity</string>
    <string name="title_activity_rating_watch">RatingWatchActivity</string>
</resources>
