<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helloworld.MainActivity" >

    <Button
        android:id="@+id/btnMap"
        style="@style/MainActivity_MenuButton"
        android:layout_marginTop="16dp"
        android:onClick="onClickBtnMap"
        android:text="@string/MenuBtn_Map" />

    <Button
        android:id="@+id/btnRanking"
        style="@style/MainActivity_MenuButton"
        android:onClick="onClickBtnRanking"
        android:layout_below="@+id/btnMap"
        android:text="@string/MenuBtn_Ranking" />

    <Button
        android:id="@+id/Button01"
        style="@style/MainActivity_MenuButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btnRanking"
        android:onClick="onClickBtnVersion"
        android:text="@string/MenuBtn_Version" />

    <Button
        style="@style/MainActivity_MenuButton"
        android:text="@string/MenuBtn_TravelDictionary"
        android:id="@+id/btnTravelDictionary"
        android:layout_below="@+id/btnRanking"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/MainActivity_MenuButton"
        android:text="@string/MenuBtn_Setting"
        android:id="@+id/btnSetting"
        android:layout_below="@+id/btnRating"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/MainActivity_MenuButton"
        android:text="@string/MenuBtn_Rating"
        android:layout_below="@+id/btnTravelDictionary"
        android:layout_centerHorizontal="true"
        android:onClick="onClickBtnRating"
        android:id="@+id/btnRating"/>
</RelativeLayout>