<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:stretchColumns="1">
	    <TableRow android:id="@+id/tableRow1">
	        <TextView
	            android:id="@+id/TextView_placename_title"
	            android:text="@string/caption_placename"
	        />
		    <TextView
	            android:id="@+id/TextView_placename_value"
	         />
	    </TableRow>
	    <TableRow android:id="@+id/tableRow2">
	        <TextView
	            android:id="@+id/TextView_placename_en_title"
	            android:text="@string/caption_placename_en"
	        />
	        <TextView
	            android:id="@+id/TextView_placename_en_value"
	        />
	    </TableRow>
	    <TableRow android:id="@+id/tableRow3">
	        <TextView
	            android:id="@+id/TextView_address_title"
	            android:text="@string/caption_address"
	        />
	        <TextView
	            android:id="@+id/TextView_address_value"
	        />
	    </TableRow>
	    <TableRow android:id="@+id/tableRow4">
	        <TextView
	            android:id="@+id/TextView_Telephone_title"
	            android:text="@string/caption_telephone"
	        />
	        <TextView
	            android:id="@+id/TextView_Telephone_value"
	        />
	    </TableRow>
	    <TableRow android:id="@+id/tableRow5">
	        <TextView
	            android:id="@+id/TextView_Remark_title"
	            android:text="@string/caption_remark"
	        />
	        <TextView
	            android:id="@+id/TextView_Remark_value"
	        />
	    </TableRow>
	    <TableRow android:id="@+id/tableRow6">
	        <ListView
	            android:id="@+id/ListView_comment"
	            android:layout_span="3">
	        </ListView>
	    </TableRow>
    </TableLayout>
    <EditText
        android:id="@+id/EditText_Comment"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@+id/btnAddComment"
        android:inputType="text"
    />
    <Button
        android:id="@+id/btnAddComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onClickBtnAddComment"
        android:text="@string/Button_AddComment"
    />

</RelativeLayout>